--- a/index.html
+++ b/index.html
@@ -6,16 +6,43 @@
     <title>cv numérique</title>
   </head>
   <body>
+    <header class="header">
     <nav>
-      <a class="link" href="#">Accueil</a>
-      <a class="link" href="#">Professionnel</a>
-      <a class="link" href="#">Expérience</a>
-      <a class="link" href="#">Porfolio</a>
-      <a class="link" href="#">Contact</a>
+      <div>
+        <a class="link" href="#" title="home"><img src="assets/img/cv.png" class="logo"> Accueil</a>
+        <a class="link" href="#" id="competences" title="skills">Compétences</a>
+        <a class="link" href="#" title="experiences">Expériences</a>
+        <a class="link" href="#" title="hobbies">Intêrets</a>
+        <a class="link" href="#" title="contact">Contact</a>
+      </div>
     </nav>
-    <header class="head-er">
-      <h1>Lobato Leao Thyago</h1>
+      <div class="head-hote">
+        <h1 class="name">Thyago Lobato Leao</h1>
+          <hr class="head-futur-bar">
+          <legend class="head-futur">Developpeur web junior</legend>
+          <p class="head-profil"> work in progres, apprentissage en cours........</p>
+        <hr class="head-futur-bar">
+
+      </div>
     </header>
+
+    <article class="body">
+      <h2 class="skills" href="#competences">Compétences</h2>
+      <fieldset>
+
+      </fieldset>
+
+      <h3 class="experience">Expériences</h3>
+      <fieldset>
+
+      </fieldset>
+
+
+    </article>
+
+    <footer class="footer">
+
+    </footer>
 
 
   </body>
