--- a/index.html
+++ b/index.html
@@ -5,43 +5,45 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>cv numérique</title>
   </head>
+  <nav>
+    <div>
+      <a class="link" href="#" title="home"><img src="assets/img/cv.png" class="logo-home"></a>
+      <a class="link" href="#competences" title="skills">Compétences</a>
+      <a class="link" href="#experiences" title="experiences">Expériences</a>
+      <a class="link" href="#projects" title="projects">Portfolio</a>
+      <a class="link" href="#hobbies" title="hobbies">Intêrets</a>
+      <a class="link" href="#contact" title="contact">Contact <img src="assets/img/email.png" class="email-logo"></a>
+    </div>
+  </nav>
   <body>
     <header class="header">
-    <nav>
+    <img src="assets/img/portrait.jpg" class="portrait">
       <div>
-        <a class="link" href="#" title="home"><img src="assets/img/cv.png" class="logo"> Accueil</a>
-        <a class="link" href="#" id="competences" title="skills">Compétences</a>
-        <a class="link" href="#" title="experiences">Expériences</a>
-        <a class="link" href="#" title="hobbies">Intêrets</a>
-        <a class="link" href="#" title="contact">Contact</a>
-      </div>
-    </nav>
-      <div class="head-hote">
-        <h1 class="name">Thyago Lobato Leao</h1>
-          <hr class="head-futur-bar">
+        <h1 class="head-name">Thyago Lobato leão</h1>
+            <hr class="head-futur-bar">
           <legend class="head-futur">Developpeur web junior</legend>
-          <p class="head-profil"> work in progres, apprentissage en cours........</p>
-        <hr class="head-futur-bar">
+          <p class="head-profil"> work in progress, apprentissage en cours........</p>
+            <hr class="head-futur-bar">
 
       </div>
     </header>
 
-    <article class="body">
-      <h2 class="skills" href="#competences">Compétences</h2>
-      <fieldset>
-
-      </fieldset>
-
-      <h3 class="experience">Expériences</h3>
-      <fieldset>
-
-      </fieldset>
-
-
+    <article class="article">
+      <div class="bar-title"> <h2 class="article-h2" class="bar-title" id="competences">COMPETENCES</h2></div>
+      <div class="bar-title"> <h3 class="article-h3" class="bar-title" id="experiences">EXPERIENCE PROFESSIONNELLE</h3></div>
+      <div class="bar-title"> <h4 class="article-h4" class="bar-title" id="projects">PORTFOLIO</h4></div>
     </article>
 
-    <footer class="footer">
 
+
+    <footer class="footer">
+      <div class="bar-title"><h5 class="footer-h5"  id="hobbies">INTÊRETS</h5></div>
+
+      <div class="bar-title"><h6 class="footer-h6"  id="contact">CONTACT</h6></div>
+      <fieldset class="block-mail">
+        <img src="assets/img/email.png" class="email-logo">
+
+      </fieldset>
     </footer>
 
 
