--- a/index.html
+++ b/index.html
@@ -1,51 +1,103 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>cv numérique</title>
-  </head>
-  <nav>
-    <div>
-      <a class="link" href="#" title="home"><img src="assets/img/cv.png" class="logo-home"></a>
-      <a class="link" href="#competences" title="skills">Compétences</a>
-      <a class="link" href="#experiences" title="experiences">Expériences</a>
-      <a class="link" href="#projects" title="projects">Portfolio</a>
-      <a class="link" href="#hobbies" title="hobbies">Intêrets</a>
-      <a class="link" href="#contact" title="contact">Contact <img src="assets/img/email.png" class="email-logo"></a>
-    </div>
-  </nav>
-  <body>
-    <header class="header">
-    <img src="assets/img/portrait.jpg" class="portrait">
-      <div>
-        <h1 class="head-name">Thyago Lobato leão</h1>
-            <hr class="head-futur-bar">
-          <legend class="head-futur">Developpeur web junior</legend>
-          <p class="head-profil"> work in progress, apprentissage en cours........</p>
-            <hr class="head-futur-bar">
-
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <title>cv numérique</title>
+</head>
+<body>
+  <header> <!--start header-->
+    <div class="container-fluid">
+      <img src="assets/img/portrait.jpg" id="portrait" class="img-fluid" alt="">
+      <h1 class="header-name">Thyago Lobato leão</h1>
+      <hr class="header-bar">
+      <h2 class="header-info">Developpeur web junior</h2>
+      <p>work in progress, apprentissage en cours...</p>
+      <hr class="header-bar">
+      <nav class="navbar navbar-fixed-top navbar-expand-md navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="navbar-nav">
+            <a class="navbar-brand" href="#">CV Numérique</a>
+            <li class="nav-item"><a class="nav-link" href="#skills">Compétences</a></li>
+            <li class="nav-item"><a class="nav-link" href="#experiences">Expériences</a></li>
+            <li class="nav-item"><a class="nav-link" href="#projects">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="#hobbies">Intêrets</a></li>
+            <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+          </div>
+        </ul>
       </div>
-    </header>
+    </nav>
+  </header> <!-- end header-->
 
-    <article class="article">
-      <div class="bar-title"> <h2 class="article-h2" class="bar-title" id="competences">COMPETENCES</h2></div>
-      <div class="bar-title"> <h3 class="article-h3" class="bar-title" id="experiences">EXPERIENCE PROFESSIONNELLE</h3></div>
-      <div class="bar-title"> <h4 class="article-h4" class="bar-title" id="projects">PORTFOLIO</h4></div>
-    </article>
+  <article><!--start article -->
+    <div class="container">
+      <h1 class="bar-title" id="skills">COMPETENCES</h1>
+      <div>
+        <legend>HTML</legend>
+        <div class="progress" style="width:40%">
+          <div class="progress-bar progress-bar-left progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 40%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">40%</div>
+        </div>
+      </div>
 
+      <div>
+        <legend>CSS</legend>
+        <div class="progress" style="width:40%">
+          <div class="progress-bar progress-bar-left progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 35%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">35%</div>
+        </div>
+      </div>
 
+      <div>
+        <legend>BOOTSTRAP</legend>
+        <div class="progress" style="width:40%">
+          <div class="progress-bar progress-bar-left progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 20%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">20%</div>
+        </div>
+      </div>
+    </div>
 
-    <footer class="footer">
-      <div class="bar-title"><h5 class="footer-h5"  id="hobbies">INTÊRETS</h5></div>
+    <div class="container">
+      <h2 class="bar-title" id="experiences">EXPERIENCE PROFESSIONNELLE</h2>
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">test</h4>
+          <p class="card-text">test</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">test</h4>
+          <p class="card-text">test</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">test</h4>
+          <p class="card-text">test</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <h2 class="bar-title" id="projects">PORTFOLIO</h2>
+    </div>
+    <div class="container">
+      <h2 class="bar-title" id="hobbies">INTÊRETS</h2>
+    </div>
+    <div class="container">
+      <h2 class="bar-title" id="contact">CONTACT</h2>
+    </div>
+  </article> <!--end article-->
 
-      <div class="bar-title"><h6 class="footer-h6"  id="contact">CONTACT</h6></div>
-      <fieldset class="block-mail">
-        <img src="assets/img/email.png" class="email-logo">
-
-      </fieldset>
-    </footer>
-
-
-  </body>
+  <footer> <!--start footer-->
+    <div class="container-fluid bg-secondary">
+      test
+    </div>
+  </footer> <!-- end footer -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</body>
 </html>
