--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="assets/css/style.css">
+  <script type="text/javascript" src="assets/js/function.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -12,86 +13,152 @@
 <body>
   <header> <!--start header-->
     <div class="container-fluid">
-      <img src="assets/img/portrait.jpg" id="portrait" class="img-fluid" alt="">
+      <img src="assets/img/portrait.jpg" id="portrait" class="img-fluid" alt="responsive image">
       <h1 class="header-name">Thyago Lobato leão</h1>
       <hr class="header-bar">
       <h2 class="header-info">Developpeur web junior</h2>
-      <p>work in progress, apprentissage en cours...</p>
+      <p>..Objectif : Devenir développeur web 'full-stack'..</p>
       <hr class="header-bar">
-      <nav class="navbar navbar-fixed-top navbar-expand-md navbar-dark bg-dark">
+    </div>
+  </header> <!-- end header-->
+  <article><!--start article -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top" style="font-family: 'Josefin Sans', sans-serif;"> <!--navbar-->
+      <div class="container">
+        <a class="navbar-brand" href="#">LOGO</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
-          <ul class="navbar-nav">
-            <a class="navbar-brand" href="#">CV Numérique</a>
+          <ul class="navbar-nav mr-auto w-100 justify-content-center">
+            <li class="nav-item active"><a class="nav-link" href="#">Accueil</a></li>
             <li class="nav-item"><a class="nav-link" href="#skills">Compétences</a></li>
-            <li class="nav-item"><a class="nav-link" href="#experiences">Expériences</a></li>
+            <li class="nav-item"><a class="nav-link" href="#experiences">Formations</a></li>
             <li class="nav-item"><a class="nav-link" href="#projects">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="#hobbies">Intêrets</a></li>
             <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-          </div>
-        </ul>
+          </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="btn btn-secondary" href="#">CV</a></li> <!--download CV-->
+          </ul>
+        </div>
       </div>
-    </nav>
-  </header> <!-- end header-->
+    </nav> <!--end navbar-->
+    <div class="container-fluid">
 
-  <article><!--start article -->
-    <div class="container">
       <h1 class="bar-title" id="skills">COMPETENCES</h1>
-      <div>
-        <legend>HTML</legend>
-        <div class="progress" style="width:40%">
-          <div class="progress-bar progress-bar-left progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 40%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">40%</div>
-        </div>
-      </div>
 
-      <div>
-        <legend>CSS</legend>
-        <div class="progress" style="width:40%">
-          <div class="progress-bar progress-bar-left progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 35%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">35%</div>
-        </div>
-      </div>
+<div id="container"></div>
 
-      <div>
-        <legend>BOOTSTRAP</legend>
-        <div class="progress" style="width:40%">
-          <div class="progress-bar progress-bar-left progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 20%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">20%</div>
+      <div class="container">
+        <legend class="mini-title">Langage de programmation</legend>
+        <div class="progress" style="width:90%">
+          <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 48%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">HTML 48%</div>
+        </div>
+        <div class="progress" style="width:90%">
+          <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 36%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">CSS 36%</div>
+        </div>
+        <div class="progress" style="width:90%">
+          <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated text-black" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">BOOTSTRAP 24%</div>
         </div>
       </div>
-    </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <legend class="mini-title">Personnel</legend>
+            <div class="progress" style="width:90%">
+              <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 61%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">FACILITE D'DAPTATION 61%</div>
+            </div>
+            <div class="progress" style="width:90%">
+              <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 89%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">MINTUTIE 89%</div>
+            </div>
+            <div class="progress" style="width:90%">
+              <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 67%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">PERSEVERANCE 67%</div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <legend class="mini-title">Langue</legend>
+            <div class="progress" style="width:90%">
+              <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 69%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">PORTUGAIS 69%</div>
+            </div>
+            <div class="progress" style="width:90%">
+              <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 88%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">FRANÇAIS 88%</div>
+            </div>
+            <div class="progress" style="width:90%">
+              <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">ANGLAIS 19%</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="container">
+        <h3 class="bar-title" id="experiences">FORMATIONS</h3>
+        <!-- GROS TEST -->
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="main-timeline9">
+                <div class="timeline">
+                  <div class="timeline-content">
+                    <div class="circle"><span><i class="fa fa-globe"></i></span></div>
+                    <div class="content">
+                      <span class="year">2013 - 2015</span>
+                      <h4 class="title">Étudiant au Collège André Malraux</h4>
+                      <p class="description">
+                        Obtention du Brevet des Collèges ainsi que Diplôme Delf B1 réussi
+                        </p>
+                      <div class="icon"><span></span></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="timeline">
+                  <div class="timeline-content">
+                    <div class="circle"><span><i class="fa fa-rocket"></i></span></div>
+                    <div class="content">
+                      <span class="year">2015 - 2018</span>
+                      <h4 class="title">Étudiant au lycée Mireille Grenet</h4>
+                      <p class="description">
+                        Bac Pro – ELEEC
+                      </p>
+                      <div class="icon"><span></span></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="timeline">
+                  <div class="timeline-content">
+                    <div class="circle"><span><i class="fa fa-mobile"></i></span></div>
+                    <div class="content">
+                      <span class="year">2018 - 2019</span>
+                      <h4 class="title">Formation Développeur web et web mobile</h4>
+                      <p class="description">
 
-    <div class="container">
-      <h2 class="bar-title" id="experiences">EXPERIENCE PROFESSIONNELLE</h2>
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">test</h4>
-          <p class="card-text">test</p>
+                      </p>
+                      <div class="icon"><span></span></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+        <!-- GROS TEST -->
       </div>
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">test</h4>
-          <p class="card-text">test</p>
-        </div>
+      <div class="container">
+        <h4 class="bar-title" id="projects">PORTFOLIO</h4>
+        a remplir
       </div>
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">test</h4>
-          <p class="card-text">test</p>
-        </div>
+      <div class="container">
+        <h5 class="bar-title" id="hobbies">INTÊRETS</h5>
+        base-ball, codage, l'intrigue, Dessin
       </div>
-    </div>
-    <div class="container">
-      <h2 class="bar-title" id="projects">PORTFOLIO</h2>
-    </div>
-    <div class="container">
-      <h2 class="bar-title" id="hobbies">INTÊRETS</h2>
-    </div>
-    <div class="container">
-      <h2 class="bar-title" id="contact">CONTACT</h2>
+      <div class="container">
+        <h6 class="bar-title" id="contact">CONTACT</h6>
+        a remplir
+      </div>
     </div>
   </article> <!--end article-->
+
+
+
 
   <footer> <!--start footer-->
     <div class="container-fluid bg-secondary">
