--- a/index.html
+++ b/index.html
@@ -3,168 +3,88 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="assets/css/style.css">
-  <script type="text/javascript" src="assets/js/function.js"></script>
+  <!-- version locale de bootstrap -->
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/css/bootstrap.-grid.min.css">
+  <!-- police pour la partie header -->
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+  <!-- police pour la partie main -->
   <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <title>cv numérique</title>
+  <!-- CDN bootstrap
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
+  <title>CV - Thyago</title>
 </head>
 <body>
-  <header> <!--start header-->
-    <div class="container-fluid">
-      <img src="assets/img/portrait.jpg" id="portrait" class="img-fluid" alt="responsive image">
-      <h1 class="header-name">Thyago Lobato leão</h1>
-      <hr class="header-bar">
-      <h2 class="header-info">Developpeur web junior</h2>
-      <p>..Objectif : Devenir développeur web 'full-stack'..</p>
-      <hr class="header-bar">
-    </div>
-  </header> <!-- end header-->
-  <article><!--start article -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top" style="font-family: 'Josefin Sans', sans-serif;"> <!--navbar-->
-      <div class="container">
-        <a class="navbar-brand" href="#">LOGO</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar">
-          <ul class="navbar-nav mr-auto w-100 justify-content-center">
-            <li class="nav-item active"><a class="nav-link" href="#">Accueil</a></li>
-            <li class="nav-item"><a class="nav-link" href="#skills">Compétences</a></li>
-            <li class="nav-item"><a class="nav-link" href="#experiences">Formations</a></li>
-            <li class="nav-item"><a class="nav-link" href="#projects">Portfolio</a></li>
-            <li class="nav-item"><a class="nav-link" href="#hobbies">Intêrets</a></li>
-            <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-          </ul>
-          <ul class="navbar-nav">
-            <li class="nav-item"><a class="btn btn-secondary" href="#">CV</a></li> <!--download CV-->
-          </ul>
-        </div>
-      </div>
-    </nav> <!--end navbar-->
-    <div class="container-fluid">
-
-      <h1 class="bar-title" id="skills">COMPETENCES</h1>
-
-<div id="container"></div>
-
-      <div class="container">
-        <legend class="mini-title">Langage de programmation</legend>
-        <div class="progress" style="width:90%">
-          <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 48%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">HTML 48%</div>
-        </div>
-        <div class="progress" style="width:90%">
-          <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 36%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">CSS 36%</div>
-        </div>
-        <div class="progress" style="width:90%">
-          <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated text-black" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">BOOTSTRAP 24%</div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <legend class="mini-title">Personnel</legend>
-            <div class="progress" style="width:90%">
-              <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 61%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">FACILITE D'DAPTATION 61%</div>
-            </div>
-            <div class="progress" style="width:90%">
-              <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 89%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">MINTUTIE 89%</div>
-            </div>
-            <div class="progress" style="width:90%">
-              <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 67%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">PERSEVERANCE 67%</div>
-            </div>
+  <!--start header-->
+  <header>
+    <div class="container">
+    <div class="header-box">
+        <img src="assets/img/portrait.jpg" id="portrait" class="img-fluid" alt="responsive image">
+        <h1 class="header-name">Thyago Lobato leão</h1>
+        <div class="header-bar"></div>
+        <h2 class="header-info">Developpeur web junior</h2>
+        <p>..Objectif : Devenir un dev 'Full-Stack'..</p>
+        <div class="header-bar"></div>
+        <p class="">Salut moi c'est Thyago, je suis un jeune étudiant dans le monde de 'Developpeur web et Web mobile'.</p>
+          <span class="">'Sans L'imaginaire ce monde est nous ne serions que des entités sans réelle créativité'</span>
+          <!--navbar-->
+          <nav >
+            <div class="navbar">
+            <a class="nav-link active" href="#skills">Compétences</a>
+            <a class="nav-link active" href="#experiences">Formations</a>
+            <a class="nav-link active" href="#projects">Projets</a>
+            <a class="nav-link active" href="#hobbies">Intêrets</a>
+            <a class="nav-link active" href="#contact">Contact</a>
+            <button class="btn btn-dark navbar-brand" href="#">CV papier</button>
           </div>
-          <div class="col-md-6">
-            <legend class="mini-title">Langue</legend>
-            <div class="progress" style="width:90%">
-              <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 69%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">PORTUGAIS 69%</div>
-            </div>
-            <div class="progress" style="width:90%">
-              <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" style="width: 88%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">FRANÇAIS 88%</div>
-            </div>
-            <div class="progress" style="width:90%">
-              <div class="progress-bar progress-bar-striped bg-secondary progress-bar-animated" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">ANGLAIS 19%</div>
-            </div>
-          </div>
+          </nav>
+          <!--end navbar-->
+      </div>
+      </div>
+    </header>
+    <!-- end header -->
+    <!--start main -->
+    <main>
+      <div class="container skills" id="skills">
+        <h1>Compétences</h1>
+      </div>
+      <div class="container">
+        <div id="experiences">
+          <h1>Formations</h1>
         </div>
       </div>
-      </div>
       <div class="container">
-        <h3 class="bar-title" id="experiences">FORMATIONS</h3>
-        <!-- GROS TEST -->
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="main-timeline9">
-                <div class="timeline">
-                  <div class="timeline-content">
-                    <div class="circle"><span><i class="fa fa-globe"></i></span></div>
-                    <div class="content">
-                      <span class="year">2013 - 2015</span>
-                      <h4 class="title">Étudiant au Collège André Malraux</h4>
-                      <p class="description">
-                        Obtention du Brevet des Collèges ainsi que Diplôme Delf B1 réussi
-                        </p>
-                      <div class="icon"><span></span></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="timeline">
-                  <div class="timeline-content">
-                    <div class="circle"><span><i class="fa fa-rocket"></i></span></div>
-                    <div class="content">
-                      <span class="year">2015 - 2018</span>
-                      <h4 class="title">Étudiant au lycée Mireille Grenet</h4>
-                      <p class="description">
-                        Bac Pro – ELEEC
-                      </p>
-                      <div class="icon"><span></span></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="timeline">
-                  <div class="timeline-content">
-                    <div class="circle"><span><i class="fa fa-mobile"></i></span></div>
-                    <div class="content">
-                      <span class="year">2018 - 2019</span>
-                      <h4 class="title">Formation Développeur web et web mobile</h4>
-                      <p class="description">
-
-                      </p>
-                      <div class="icon"><span></span></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div id="projects">
+          <h1>Projets</h1>
         </div>
-        <!-- GROS TEST -->
       </div>
       <div class="container">
-        <h4 class="bar-title" id="projects">PORTFOLIO</h4>
-        a remplir
+        <div id="hobbies">
+          <h1>Intêrets</h1>
+        </div>
       </div>
       <div class="container">
-        <h5 class="bar-title" id="hobbies">INTÊRETS</h5>
-        base-ball, codage, l'intrigue, Dessin
+        <div id="contact">
+          <h1>Contact</h1>
+        </div>
       </div>
-      <div class="container">
-        <h6 class="bar-title" id="contact">CONTACT</h6>
-        a remplir
+    </main>
+    <!--end main-->
+    <!--start footer-->
+    <footer class="bg-secondary">
+      <div class="box container text-center">
       </div>
-    </div>
-  </article> <!--end article-->
-
-
-
-
-  <footer> <!--start footer-->
-    <div class="container-fluid bg-secondary">
-      test
-    </div>
-  </footer> <!-- end footer -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-</body>
-</html>
+    </footer>
+    <!-- end footer -->
+    <!-- version locale de jquery -->
+    <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <!-- CDN jquery -->
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> -->
+    <script type="text/javascript" src="assets/js/script.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <!-- CDN js bootstrap -->
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
+  </body>
+  </html>
