--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<a href="https://github.com/mumei-u" target="_blank" data-toggle="github-tooltip" data-placement="top" title="Mon github"><img class="logo-navbar" src="assets/img/github-logo.png" alt="Logo Github"></a>
 					<a href="https://www.linkedin.com/in/thyago-lobato-leao-369079198/" target="_blank" data-toggle="linkedin-tooltip" data-placement="top" title="Mon linkedin"><img class="logo-navbar" src="assets/img/linkedin-logo.png" alt="Logo Linkedin"></a>
 					<a href="mailto:t.lobato-leao@outlook.fr" target="_blank" data-toggle="email-tooltip" data-placement="top" title="M'envoyer un e-mail"><img class="logo-navbar" src="assets/img/email-logo.png" alt="Logo E-mail"></a>
-					<a href="assets\CV-pdf.pdf" target="_blank" data-toggle="cv-tooltip" data-placement="top" title="Télécharger mon CV papier"><img class="logo-navbar" src="assets/img/cv-logo.png" alt="Logo CV"></a>
+					<a href="asset/CV-pdf.pdf" target="_blank" data-toggle="cv-tooltip" data-placement="top" title="Télécharger mon CV papier"><img class="logo-navbar" src="assets/img/cv-logo.png" alt="Logo CV"></a>
 				</div>
 				<div class="container-fluid">
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
