--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 				<div class="bloc-projets col-xl-3 col-lg-5 col-md-10 col-sm-10" data-aos="zoom-in" data-aos-duration="1000">
 					<div class="row">
 						<div class="col-12">
-							<img src="assets/img/projet-cv.png" class="img-fluid" alt="Image`Nation">
+							<img src="assets/img/projet-cv.PNG" class="img-fluid" alt="Image`Nation">
 						</div>
 					</div>
 					<div class="row">
