--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<!-- section presentation end -->
 			<!-- section experience & formations start -->
 			<section id="experience-formations" class="row justify-content-around" style="overflow-x: hidden; overflow-y: hidden;">
-				<div class="col-xl-5 col-md-10 col-sm-10" data-aos="fade-up" data-aos-duration="1000">
+				<!-- <div class="col-xl-5 col-md-10 col-sm-10" data-aos="fade-up" data-aos-duration="1000">
 					<h3 id="experience" class="text-center mb-4">Expérience</h3>
 					<div class="row">
 						<div class="col-xl-12">
@@ -102,7 +102,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="col-xl-5 col-md-10 col-sm-10" data-aos="fade-down" data-aos-duration="1000">
 					<h3 id="formations" class="text-center mb-4">Formations</h3>
 					<div class="row">
@@ -148,7 +148,7 @@
 								<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 									<h4 class="text-dark">HTML 5</h4>
 									<div class="progress w-100">
-										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-html" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-html" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
 									</div>
 									<span class="text-bloc-competences">Avanvé</span>
 								</div>
@@ -196,9 +196,9 @@
 								<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 									<h4 class="text-dark">Javascript</h4>
 									<div class="progress w-100">
-										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-js" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
+										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-js" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
 									</div>
-									<span class="text-bloc-competences">Intermédiaire</span>
+									<span class="text-bloc-competences">Novice</span>
 								</div>
 							</div>
 						</div>
@@ -212,7 +212,7 @@
 								<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 									<h4 class="text-dark">PHP</h4>
 									<div class="progress w-100">
-										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-php" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
+										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-php" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
 									</div>
 									<span class="text-bloc-competences">Intermédiaire</span>
 								</div>
@@ -228,7 +228,7 @@
 								<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 									<h4 class="text-dark">MySQL</h4>
 									<div class="progress w-100">
-										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-mysql" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%"></div>
+										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-mysql" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
 									</div>
 									<span class="text-bloc-competences">Intermédiaire</span>
 								</div>
@@ -244,69 +244,133 @@
 								<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 									<h4 class="text-dark">jQuery</h4>
 									<div class="progress w-100">
-										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-jquery" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 20%"></div>
+										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-jquery" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%"></div>
 									</div>
-									<span class="text-bloc-competences">Débutant</span>
+									<span class="text-bloc-competences">Novice</span>
 								</div>
 							</div>
 						</div>
 						<!-- bloc jquery end -->
-						<!-- bloc git & linux start -->
-						<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
-							<div class="row justify-content-center">
-								<div class="col-3 d-flex align-items-center">
-									<img src="assets/img/git-logo.png" class="img-fluid" alt="Logo Git">
-								</div>
-								<div class="col-8 d-flex flex-column justify-content-center align-items-center">
-									<h4 class="text-dark">Git & Linux</h4>
-									<div class="progress w-100">
-										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-git" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
-									</div>
-									<span class="text-bloc-competences">Intermédiaire</span>
-								</div>
-							</div>
-						</div>
-						<!-- bloc git & linux end -->
 						<!-- bloc wordpress start -->
 						<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
-							<div class="row justify-content-center">
-								<div class="col-3 d-flex align-items-center">
-									<img src="assets/img/wordpress-logo.png" class="img-fluid" alt="Logo Wordpress">
-								</div>
-								<div class="col-8 d-flex flex-column justify-content-center align-items-center">
-									<h4 class="text-dark">Wordpress</h4>
-									<div class="progress w-100">
-										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wordpress" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
-									</div>
-									<span class="text-bloc-competences">Intermédiaire</span>
-								</div>
-							</div>
+						  <div class="row justify-content-center">
+						    <div class="col-3 d-flex align-items-center">
+						      <img src="assets/img/wordpress-logo.png" class="img-fluid" alt="Logo Wordpress">
+						    </div>
+						    <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+						      <h4 class="text-dark">Wordpress</h4>
+						      <div class="progress w-100">
+						        <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wordpress" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%"></div>
+						      </div>
+						      <span class="text-bloc-competences">Intermédiaire</span>
+						    </div>
+						  </div>
 						</div>
 						<!-- bloc wordpress end -->
-						<!-- bloc anglais start -->
-						<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="500" data-aos-duration="1000">
-							<div class="row justify-content-center">
-								<div class="col-3 d-flex align-items-center">
-									<img src="assets/img/anglais-logo.png" class="img-fluid" alt="Logo Anglais">
-								</div>
-								<div class="col-8 d-flex flex-column justify-content-center align-items-center">
-									<h4 class="text-dark">Anglais</h4>
-									<div class="progress w-100">
-										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-anglais" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 20%"></div>
-									</div>
-									<span class="text-bloc-competences">Débutant</span>
-								</div>
-							</div>
+						<!-- bloc atom start -->
+						<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
+						  <div class="row justify-content-center">
+						    <div class="col-3 d-flex align-items-center">
+						      <img src="assets/img/atom.png" class="img-fluid" alt="Logo Wordpress">
+						    </div>
+						    <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+						      <h4 class="text-dark">Atom</h4>
+						      <div class="progress w-100">
+						        <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-wordpress" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+						      </div>
+						      <span class="text-bloc-competences">Avancé</span>
+						    </div>
+						  </div>
 						</div>
-						<!-- bloc anglais end -->
+						<!-- bloc atom end -->
 					</div>
+					<!-- Début Collapse -->
+				    <p class="text-center">
+				  <a class="btn btn-dark" data-toggle="collapse" href="#otherscollaps" role="button" aria-expanded="false" aria-controls="collapseExample">
+				    Logiciels et +
+				  </a>
+				</p>
+				<div class="collapse" id="otherscollaps"><!-- bloc mySQL start -->
+					<div class="row justify-content-around">
+				<!-- bloc git & linux start -->
+				<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
+				  <div class="row justify-content-center">
+				    <div class="col-3 d-flex align-items-center">
+				      <img src="assets/img/git-logo.png" class="img-fluid" alt="Logo Git">
+				    </div>
+				    <div class="col-8 d-flex flex-column justify-content-center align-items-center">
+				      <h4 class="text-dark">Git & Linux</h4>
+				      <div class="progress w-100">
+				        <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-git" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+				      </div>
+				      <span class="text-bloc-competences">Avancé</span>
+				    </div>
+				  </div>
+				</div>
+				<!-- bloc git & linux end -->
+			</div>
+				<div class="row justify-content-around">
+			<!-- bloc git & linux start -->
+			<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
+				<div class="row justify-content-center">
+					<div class="col-3 d-flex align-items-center">
+						<img src="assets/img/illustrator.png" class="img-fluid" alt="Logo Git">
+					</div>
+					<div class="col-8 d-flex flex-column justify-content-center align-items-center">
+						<h4 class="text-dark">Illustrator</h4>
+						<div class="progress w-100">
+							<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-Illustrator" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%"></div>
+						</div>
+						<span class="text-bloc-competences">Avancé</span>
+					</div>
+				</div>
+			</div>
+			<!-- bloc git & linux end -->
+		</div>
+			<div class="row justify-content-around">
+		<!-- bloc git & linux start -->
+		<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
+			<div class="row justify-content-center">
+				<div class="col-3 d-flex align-items-center">
+					<img src="assets/img/photoshop.png" class="img-fluid" alt="Logo Git">
+				</div>
+				<div class="col-8 d-flex flex-column justify-content-center align-items-center">
+					<h4 class="text-dark">Photoshop</h4>
+					<div class="progress w-100">
+						<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-Photoshop" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
+					</div>
+					<span class="text-bloc-competences">Novice</span>
+				</div>
+			</div>
+		</div>
+		<!-- bloc git & linux end -->
+	</div>
+		<div class="row justify-content-around">
+	<!-- bloc git & linux start -->
+	<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
+		<div class="row justify-content-center">
+			<div class="col-3 d-flex align-items-center">
+				<img src="assets/img/indesign.png" class="img-fluid" alt="Logo Git">
+			</div>
+			<div class="col-8 d-flex flex-column justify-content-center align-items-center">
+				<h4 class="text-dark">InDesign</h4>
+				<div class="progress w-100">
+					<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-InDesign" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%"></div>
+				</div>
+				<span class="text-bloc-competences">Intermédiaire</span>
+			</div>
+		</div>
+	</div>
+	<!-- bloc git & linux end -->
+</div>
 				</div>
 			</section>
 			<!-- section competences end -->
 			<!-- section projets start -->
-			<section id="projets" class="row justify-content-around align-items-start responsive-aos-fix">
+			<section id="projets" class="row justify-content-around align-items-start ">
 				<div class="col-xl-12 align-self-end p-5" data-aos="fade-in" data-aos-duration="1000">
 					<h3 class="text-center">Portfolio</h3>
+					<p class="text-muted text-center">Création d'un Portfolio wrodpress en cours</p>
 				</div>
 				<!-- bloc cleanerworld start -->
 				<div class="bloc-projets col-xl-3 col-lg-5 col-md-10 col-sm-10" data-aos="zoom-in-right" data-aos-duration="1000">
@@ -404,7 +468,7 @@
 				<div class="bloc-projets col-xl-3 col-lg-5 col-md-10 col-sm-10" data-aos="zoom-in" data-aos-duration="1000">
 					<div class="row">
 						<div class="col-12">
-							<img src="assets/img/projet-cv.PNG" class="img-fluid" alt="Image`Nation">
+							<img src="assets/img/projet-cv.png" class="img-fluid" alt="Numeri School">
 						</div>
 					</div>
 					<div class="row">
