--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 			<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
 				<div class="row justify-content-center">
 					<div class="col-3 d-flex align-items-center">
-						<img src="assets/img/illustrator.png" class="img-fluid" alt="Logo Git">
+						<img src="assets/img/Illustrator.png" class="img-fluid" alt="Logo Illustrator">
 					</div>
 					<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 						<h4 class="text-dark">Illustrator</h4>
@@ -332,7 +332,7 @@
 		<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
 			<div class="row justify-content-center">
 				<div class="col-3 d-flex align-items-center">
-					<img src="assets/img/photoshop.png" class="img-fluid" alt="Logo Git">
+					<img src="assets/img/photoshop.png" class="img-fluid" alt="Logo Photoshop">
 				</div>
 				<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 					<h4 class="text-dark">Photoshop</h4>
@@ -350,7 +350,7 @@
 	<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
 		<div class="row justify-content-center">
 			<div class="col-3 d-flex align-items-center">
-				<img src="assets/img/indesign.png" class="img-fluid" alt="Logo Git">
+				<img src="assets/img/indesign.png" class="img-fluid" alt="Logo InDesign">
 			</div>
 			<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 				<h4 class="text-dark">InDesign</h4>
@@ -468,7 +468,7 @@
 				<div class="bloc-projets col-xl-3 col-lg-5 col-md-10 col-sm-10" data-aos="zoom-in" data-aos-duration="1000">
 					<div class="row">
 						<div class="col-12">
-							<img src="assets/img/projet-cv.png" class="img-fluid" alt="Numeri School">
+							<img src="assets/img/projet-cv.png" class="img-fluid" alt="Image`Nation">
 						</div>
 					</div>
 					<div class="row">
@@ -476,7 +476,7 @@
 							<h4 class="text-dark text-center mt-3">Image`Nation</h4>
 							<hr>
 							<div class="row flex-column align-items-center">
-								<button class="btn btn-outline-light btn-numeri-school" type="button" data-toggle="collapse" data-target="#collapseNS" aria-expanded="false" aria-controls="collapseNS">
+								<button class="btn btn-outline-light btn-imagenation" type="button" data-toggle="collapse" data-target="#collapseNS" aria-expanded="false" aria-controls="collapseNS">
     							Détails
 	  						</button>
 								<div class="collapse mt-4" id="collapseNS">
