--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 				    Logiciels et +
 				  </a>
 				</p>
-				<div class="collapse" id="otherscollaps"><!-- bloc mySQL start -->
+				<div class="collapse" id="otherscollaps">
 					<div class="row justify-content-around">
 				<!-- bloc git & linux start -->
 				<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
@@ -308,9 +308,7 @@
 				  </div>
 				</div>
 				<!-- bloc git & linux end -->
-			</div>
-				<div class="row justify-content-around">
-			<!-- bloc git & linux start -->
+			<!-- bloc Illustrator start -->
 			<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
 				<div class="row justify-content-center">
 					<div class="col-3 d-flex align-items-center">
@@ -326,9 +324,7 @@
 				</div>
 			</div>
 			<!-- bloc git & linux end -->
-		</div>
-			<div class="row justify-content-around">
-		<!-- bloc git & linux start -->
+		<!-- bloc photoshop start -->
 		<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
 			<div class="row justify-content-center">
 				<div class="col-3 d-flex align-items-center">
@@ -343,10 +339,8 @@
 				</div>
 			</div>
 		</div>
-		<!-- bloc git & linux end -->
-	</div>
-		<div class="row justify-content-around">
-	<!-- bloc git & linux start -->
+		<!-- bloc photoshop end -->
+	<!-- bloc InDesign start -->
 	<div class="bloc-competences col-xl-3 col-md-5 col-sm-8" data-aos="flip-left" data-aos-delay="400" data-aos-duration="1000">
 		<div class="row justify-content-center">
 			<div class="col-3 d-flex align-items-center">
@@ -361,7 +355,8 @@
 			</div>
 		</div>
 	</div>
-	<!-- bloc git & linux end -->
+	<!-- bloc InDesign end -->
+</div>
 </div>
 				</div>
 			</section>
