--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 									<div class="progress w-100">
 										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-js" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
 									</div>
-									<span class="text-bloc-competences">Intermédiaire</span>
+									<span class="text-bloc-competences">Amateur</span>
 								</div>
 							</div>
 						</div>
@@ -212,9 +212,9 @@
 								<div class="col-8 d-flex flex-column justify-content-center align-items-center">
 									<h4 class="text-dark">PHP</h4>
 									<div class="progress w-100">
-										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-php" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
+										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-php" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
 									</div>
-									<span class="text-bloc-competences">Intermédiaire</span>
+									<span class="text-bloc-competences">Amateur</span>
 								</div>
 							</div>
 						</div>
@@ -351,7 +351,7 @@
 				<div class="progress w-100">
 					<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-InDesign" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 35%"></div>
 				</div>
-				<span class="text-bloc-competences">Novice</span>
+				<span class="text-bloc-competences">Amateur</span>
 			</div>
 		</div>
 	</div>
