--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
 					<div class="row">
 						<div class="bloc-text col-xl-12">
 							<p class="mt-4">
-								Je m'appelle Lobato Leao Thyago, et je suis actuellement en formation à
-								<b>La MANU</b>
-								d'Amiens, dans le but d'obtenir le titre professionnel "<i>Web designer [Bac+2]</i>".
+								Bonjour, moi c’est Thyago, j’ai 21-ans et
+								je suis Développeur web junior, depuis
+								mon plus jeune âge je suis passionné par
+								l'informatique et plus généralement les
+								nouvelles technologies.
+
 							</p>
 						</div>
 					</div>
@@ -69,14 +72,11 @@
 					<div class="row">
 						<div class="bloc-text col-xl-12">
 							<p class="mt-4">
-								J'ai 21 ans, et j'habite à Compiègne.
-							</p>
-							<p>
 								Je vis en France depuis plus de 10 ans maintenant,
-								et dans ma vie j’ai toujours pris goût à designer, imaginer, m’inspirer…
-								et c’est ainsi qu’en 2019 j’ai découvert le ‘code’, et les métiers du numérique, tel que développeur web et web designer,
-								depuis cette découverte j’ai directement été pris d’intérêt par le front-end,
-								c’est pourquoi au jour d’aujourd’hui j’ai pour objectif de trouver un métier dans ce domaine.
+								et dans ma vie j’ai toujours pris goût à designer, imaginer, m’inspirer…</br>
+								C’est ainsi qu’en 2019 j’ai découvert le ‘code’ et les métiers du numérique tel que 'Développeur web et Web designer',
+								depuis cette découverte j’ai effectué une formation de Dev-web & Web mobile et directement été pris d’intérêt par le front-end,
+								c’est pourquoi à ce jour j’ai pour objectif de trouver un métier dans ce domaine.
 							</p>
 						</div>
 					</div>
