--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								Je vis en France depuis plus de 10 ans maintenant,
 								et dans ma vie j’ai toujours pris goût à designer, imaginer, m’inspirer…</br>
 								C’est ainsi qu’en 2019 j’ai découvert le ‘code’ et les métiers du numérique tel que 'Développeur web et Web designer',
-								depuis cette découverte j’ai effectué une formation de Dev-web & Web mobile et directement été pris d’intérêt par le front-end,
+								depuis cette découverte j’ai effectué une formation de Dev-web & Web mobile et j'ai directement été pris d’intérêt par le front-end,
 								c’est pourquoi à ce jour j’ai pour objectif de trouver un métier dans ce domaine.
 							</p>
 						</div>
