--- a/index.html
+++ b/index.html
@@ -109,19 +109,18 @@
 						<div class="col-xl-12">
 							<div class="row justify-content-center">
 								<div class="bloc-text col-12">
-									<h4 class="mt-3">Formation professionnelle</h4>
-									<h5 class="text-muted">
-										Septembre 2019 – Mars 2020
-									</h5>
-									<p>800h de formation ’Developpeur web et web mobilde BAC+2’ à La Manu d’Amiens
-									</p>
-									<hr class="mt-5">
-									<h4 class="mt-5">Formation professionnelle</h4>
+									<h4 class="mt-3">WEB DESIGNER ET COMMUNICATION DIGITALE</h4>
 									<h5 class="text-muted">
 										Décembre 2020 – Mars 2021
 									</h5>
-									<p>
-										469h de formation ’Web designer et communication digitale’ à La Manu d’Amiens (Durée hors stage : 259 heures)
+									<p>469h de formation ’Web designer et communication digitale’ à La Manu d’Amiens (Durée hors stage : 259 heures)
+									</p>
+									<hr class="mt-5">
+									<h4 class="mt-5">DEVELOPPEUR WEB & WEB MOBILE</h4>
+									<h5 class="text-muted">
+										Septembre 2019 – Mars 2020
+									</h5>
+									<p>800h de formation ’Developpeur web et web mobile BAC+2’ à La Manu d’Amiens
 									</p>
 								</div>
 							</div>
@@ -150,7 +149,7 @@
 									<div class="progress w-100">
 										<div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-html" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
 									</div>
-									<span class="text-bloc-competences">Intermédiaire-avanvé</span>
+									<span class="text-bloc-competences">Intermédiaire-avancé</span>
 								</div>
 							</div>
 						</div>
